# QuantumMASALA

./: .gitignore  .readthedocs.yaml  DEVELOPER_GUIDE.md  INSTALL.md  INSTALL_BUILD.md  QuantumMASALA_colab.ipynb  README.md  TODO.org  conda_qtmdec24.txt  conda_qtmsanz.txt  env_linux.yml  env_linux_mklfft.yml  pyproject.toml  pytest.ini
bench/dft-bpar-si5x5x5/: bench_qe.sh  bench_qtm.sh  si5x5x5.scf.in  si5x5x5_scf.py
bench/dft-delta/: cif2pwin_ase.py  run_pwscf.py
bench/dft-fe/: fe.scf.in  fe_scf.py
bench/dft-kpar-o/: bench_qe.sh  bench_qtm.sh  o.scf.in  o_scf.py
bench/dft-si5x5x5/: bench_qe.sh  bench_qtm.sh  si5x5x5_scf.py
bench/dft-si6x6x6/: bench_qe.sh  bench_qtm.sh  si6x6x6.scf.in  si6x6x6_scf.py
benchmarks/performance/: README.md
docs/: README.md  api_reference.rst  conf.py  index.rst  installation.rst
docs/source/: api_reference.rst  conf.py  index.rst  modules.rst  qtm.config.rst  qtm.constants.rst  qtm.containers.buffer.rst  qtm.containers.field.rst  qtm.containers.gemm_wrappers.rst  qtm.containers.rst  qtm.containers.wavefun.rst  qtm.crystal.basis_atoms.rst  qtm.crystal.crystal.rst  qtm.crystal.rst  qtm.dft.config.rst  qtm.dft.eigsolve.davidson.rst  qtm.dft.eigsolve.rst  qtm.dft.eigsolve.scipy_eigsh.rst  qtm.dft.ksham.rst  qtm.dft.kswfn.rst  qtm.dft.mixing.base.rst  qtm.dft.mixing.modbro.rst  qtm.dft.mixing.rst  qtm.dft.occup.fixed.rst  qtm.dft.occup.rst  qtm.dft.occup.smear.rst  qtm.dft.occup.utils.rst  qtm.dft.rst  qtm.dft.scf.rst  qtm.fft.backend.base.rst  qtm.fft.backend.cupy_.rst  qtm.fft.backend.mklfft_.rst  qtm.fft.backend.numpy_.rst  qtm.fft.backend.pyfftw_.rst  qtm.fft.backend.rst  qtm.fft.backend.scipy_.rst  qtm.fft.backend.utils.rst  qtm.fft.base.rst  qtm.fft.full.rst  qtm.fft.rst  (+46 more)
examples/aimd-si/: andersen_si.py  beeman_si.py  eng.py  md_qe.in  nve_lammps_si.py  nve_si.py  nve_si_vac.py  relax_si.py  temp.py  temp_extractor.py  vacf.py  vel_extract.py
examples/dft-fe/: fe_scf.py
examples/dft-iron/: fe.scf.in  fe.scf.out  fe_scf.py  fe_scf_old.py
examples/dft-si/: benchmark.sh  iterations.py  memopt_si_scf_supercell.py  qe_run.sh  run_loop.sh  si.scf.in  si_scf.py  si_scf_cubic_supercell.py  si_scf_supercell.py  si_scf_supercell_random.py  si_supercell.out  sisup3_26122024.out
examples/dft-si-supercell/: si4x4x4.scf.in  si_supercell_scf.py
examples/dft-silicon/: si.scf.in  si.scf.out  si_scf.py
examples/gw-si/: si_scf_gw.ipynb
examples/gw-silicon/: si.scf.in  si_gw.ipynb  si_gw.py  si_gw.py.py  si_scf_gw.ipynb
examples/tddft-c6h6/: c6h6_dipz.py  c6h6_scf.py  c6h6_scf_and_dipz.py
examples/tddft-ch4/: ch4.scf.in  ch4_scf_dipz.py  ch4_scf_dipz_notebook.ipynb  plot_dipz_temp.py
integration/: buffer.ipynb  dist-gspc.ipynb  fft_backend.ipynb  field.ipynb  gpu.ipynb  gspace.ipynb  hart.npz  lattice.ipynb  mpi.ipynb  np_ufunc.ipynb  test.py  ufunc.ipynb  xc.npz
integration/buffer/: Untitled.ipynb
integration/logging/: logging.ipynb  test.py
integration/mpi/: mpi-dist-gspc.ipynb  mpi_sandbox.ipynb  split.py  test-distgspc.ipynb
integration/scipyblas/: run_test.sh  test_blas.py
sandbox/: arrayidx.ipynb  charge-density.hdf5  comm-test.ipynb  commtest.py  context.ipynb  cuprates_ase.ipynb  gspcdist-test.ipynb  integration.ipynb  ipptest.ipynb  ipyparallel-test-Copy1.ipynb  ipyparallel-test.ipynb  parallel.ipynb  qtmcomm-demo.ipynb  test_ip.py
test/: SetupInterface.ipynb
tests/: README.md  test_lattice.py
(+950 files in other folders)
