[build-system]
requires = ["setuptools", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "qtm"
version = "1.0.0"
description = "Quantum MASALA: Quantum MAterialS Ab initio eLectronic-structure pAckage. It is a plane-wave and pseudopotential-based electronic structure framework"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "S Shri Hari", email = "shriharis@iisc.ac.in"},
    {name = "Agrim Sharma", email = "agrimsharma@iisc.ac.in"},
    {name = "Manish Jain", email = "mjain@iisc.ac.in"},
]
maintainers = [
    {name = "S Shri Hari", email = "shriharis@iisc.ac.in"},
    {name = "Manish Jain", email = "mjain@iisc.ac.in"}
]
keywords = ["python", "Density Functional Theory", "DFT", "Time-Dependent DFT", "TDDFT","GW", "GW Approximation", "GW Method"]
urls = {project-url = "https://www.physics.iisc.ac.in/~mjain/group/"}
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "scipy",
    "spglib",
    "tqdm",
    "h5py"
]

[project.optional-dependencies]
parallel = ["mpi4py"]
pyfftw = ["pyfftw"]
gpu = ["cupy"]

[tool.setuptools]
package-dir = {"" = "src"}

